fix(cloud-masthead): increase the z-index of cloud-masthead-container

--- a/packages/web-components/src/components/masthead/cloud/cloud-masthead.scss
+++ b/packages/web-components/src/components/masthead/cloud/cloud-masthead.scss
@@ -10,9 +10,14 @@
 
 // Cloud Masthead.
 
-:host(#{$dds-prefix}-cloud-masthead-container) {
+:host(#{$dds-prefix}-cloud-masthead-container),
+#{$dds-prefix}-cloud-masthead-container {
   position: relative;
-  z-index: 99;
+
+  /* stylelint-disable declaration-no-important */
+  /* uses !important to override z-index defined in v18 .ibm-sitenav-menu-container */
+  z-index: 999 !important;
+  /* stylelint-enable declaration-no-important */
 }
 
 :host(#{$dds-prefix}-cloud-masthead-global-bar) {
